fixed the issue of logo not showing up

--- a/superset-frontend/stylesheets/txinsights.less
+++ b/superset-frontend/stylesheets/txinsights.less
@@ -1,19 +1,6 @@
 body {
 	background: #fff;
 }
-.navbar-brand {
-	img {
-		visibility: hidden;
-	}
-}
-a.navbar-brand {
-	background-image: url(../images/txinsights-logo.png);
-	display: block;
-	width: 277px;
-	max-width: 100%;
-	height: 58px;
-	margin-top: 10px;
-}
 .navbar-nav {
 	float: left;
 	margin: 0px 0px 0px 50px;
